# tts_from_youtube_v2

./: .gitignore  IMPLEMENTATION_GUIDE_WEBPAGE_INPUT.md  README.md  pyproject.toml
src/tts_from_youtube/: audio.py  cli.py  download.py  pipeline.py  polish.py  text.py  ui.py  utils.py  webpage.py
src/tts_from_youtube/asr/: faster_whisper_asr.py
src/tts_from_youtube/tts/: coqui_tts.py  microsoft_tts.py  piper_tts.py
tests/: test_import.py  test_microsoft_tts.py  test_polish.py  test_text_cleanup.py  test_webpage.py
